fix cache use singleflight
