# internal/logic/v1/rbac/types.go
@@ -1,5 +1,7 @@
 package rbac
 
+import "gin-template/internal/model/rbac"
+
 /*
 * @Author: zouyx
 * @Email: 1003941268@qq.com
@@ -36,4 +38,10 @@ type RefreshTokenRequest struct {
 // LogoutRequest 登出请求
 type LogoutRequest struct {
 	RefreshToken string `json:"refresh_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+}
+
+// UserProfile 用户详情
+type UserProfile struct {
+	User      *rbac.User      `json:"user" description:"用户基础信息"`
+	Resources []rbac.Resource `json:"resources" description:"用户可访问的资源列表"`
 }
